--- a/test.ipynb
+++ b/test.ipynb
@@ -596,13 +596,41 @@
    "execution_count": null,
    "id": "a43595dc",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'ai (Python 3.11.13)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n ai ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from langchain.chat_models import init_chat_model\n",
+    "from config import settings\n",
+    "\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = settings.GEMINAI_API_KEY\n",
+    "\n",
+    "model = init_chat_model(\"google_genai:gemini-2.5-flash-lite\")\n",
+    "model.invoke(\"what is the capital of nepal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a52ef9d",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "production_ai",
+   "display_name": "ai_arch_env",
    "language": "python",
    "name": "python3"
   },
